# vehicle-model-cpp

./: .pre-commit-config.yaml  CMakeLists.txt  NOTICE.md  README.md
include/: CMakeLists.txt
include/vehicle_model/: Vehicle.hpp
include/vehicle_model/ADAS/: ADAS.hpp
include/vehicle_model/ADAS/ABS/: ABS.hpp
include/vehicle_model/ADAS/CruiseControl/: CruiseControl.hpp
include/vehicle_model/ADAS/EBA/: EBA.hpp
include/vehicle_model/ADAS/EBD/: EBD.hpp
include/vehicle_model/ADAS/ESC/: ESC.hpp
include/vehicle_model/ADAS/LaneDepartureDetection/: LaneDepartureDetection.hpp
include/vehicle_model/ADAS/ObstacleDetection/: ObstacleDetection.hpp
include/vehicle_model/Acceleration/: Acceleration.hpp
include/vehicle_model/AngularVelocity/: AngularVelocity.hpp
include/vehicle_model/Body/: Body.hpp
include/vehicle_model/Cabin/: Cabin.hpp
include/vehicle_model/Chassis/: Chassis.hpp
include/vehicle_model/Connectivity/: Connectivity.hpp
include/vehicle_model/CurrentLocation/: CurrentLocation.hpp
include/vehicle_model/Driver/: Driver.hpp
include/vehicle_model/Exterior/: Exterior.hpp
include/vehicle_model/OBD/: OBD.hpp
include/vehicle_model/Powertrain/: Powertrain.hpp
include/vehicle_model/Service/: Service.hpp
include/vehicle_model/Trailer/: Trailer.hpp
include/vehicle_model/VehicleIdentification/: VehicleIdentification.hpp
include/vehicle_model/VersionVSS/: VersionVSS.hpp
proto/: CMakeLists.txt
proto/service/: seats.proto
src/: CMakeLists.txt
src/vehicle_model/Cabin/SeatService/: SeatService.cpp  SeatServiceAsyncGrpcFacade.cpp
(+83 files in other folders)
